# ntpwedit-clone

./: .gitignore  CMakeLists.txt  Internship_Report.md  README.md
src/: crypto.cpp  crypto.h  main.cpp  main_cli.cpp  ntpwedit.rc  ntreg.cpp  ntreg.h  resource.h  sam.cpp  sam.h
